Adicionar bibliotecas commons e javamail para envio de e-mail

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.commons-email-1.5.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\jre\\lib\\ext\\commons-email-1.5.jar
+file.reference.javax.mail-api-1.4.7.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\jre\\lib\\ext\\javax.mail.jar
+file.reference.javax.mail.jar=C:\\Program Files\\Java\\jdk1.8.0_111\\jre\\lib\\ext
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
