--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,18 @@ dist.jar=${dist.dir}/TreinoJava3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-email-1.5.jar=C:\\Users\\User\\Downloads\\commons-email-1.5\\commons-email-1.5.jar
+file.reference.javax.mail-api-1.4.7.jar=C:\\Users\\User\\Downloads\\javax.mail-api-1.4.7.jar
+file.reference.javax.mail.jar=C:\\Users\\User\\Downloads\\javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-email-1.5.jar}:\
+    ${file.reference.javax.mail-api-1.4.7.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${libs.commons-email.classpath}:\
+    ${libs.JavaMail.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
