porta serial com rxtxcomm

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.commons-email-1.5.jar=C:\\Users\\User\\Downloads\\commons-email-1.5\\commons-email-1.5.jar
 file.reference.javax.mail-api-1.4.7.jar=C:\\Users\\User\\Downloads\\javax.mail-api-1.4.7.jar
 file.reference.javax.mail.jar=C:\\Users\\User\\Downloads\\javax.mail.jar
+file.reference.rxtxcomm.jar=C:\\Users\\User\\OneDrive\\Treinamentos\\JavaSEIII\\RXTXComm\\rxtxcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.javax.mail-api-1.4.7.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${libs.commons-email.classpath}:\
-    ${libs.JavaMail.classpath}
+    ${libs.JavaMail.classpath}:\
+    ${file.reference.rxtxcomm.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
