--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,89 +1,66 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=TreinoJava3
-application.vendor=User
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# Os arquivos em build.classes.dir que devem ser exclu\u00eddos do jar de distribui\u00e7\u00e3o
-dist.archive.excludes=
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/TreinoJava3.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+#Wed Nov 04 13:01:11 BRST 2020
 excludes=
-file.reference.commons-email-1.5.jar=C:\\Users\\User\\Downloads\\commons-email-1.5\\commons-email-1.5.jar
-file.reference.javax.mail-api-1.4.7.jar=C:\\Users\\User\\Downloads\\javax.mail-api-1.4.7.jar
-file.reference.javax.mail.jar=C:\\Users\\User\\Downloads\\javax.mail.jar
-file.reference.rxtxcomm.jar=C:\\Users\\User\\OneDrive\\Treinamentos\\JavaSEIII\\RXTXComm\\rxtxcomm.jar
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.commons-email-1.5.jar}:\
-    ${file.reference.javax.mail-api-1.4.7.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${libs.commons-email.classpath}:\
-    ${libs.JavaMail.classpath}:\
-    ${file.reference.rxtxcomm.jar}:\
-    ${libs.junit_4.classpath}
-# Space-separated list of extra javac options
-javac.compilerargs=
+file.reference.javax.mail.jar=C\:\\Users\\User\\Downloads\\javax.mail.jar
 javac.deprecation=false
+build.test.results.dir=${build.dir}/test/results
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.nonavbar=false
 javac.external.vm=true
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+javac.processorpath=${javac.classpath}
 javac.target=1.8
+annotation.processing.processors.list=
+javadoc.noindex=false
+javadoc.additionalparam=
+includes=**
+build.classes.dir=${build.dir}/classes
+source.encoding=UTF-8
+javadoc.author=false
+test.src.dir=test
+build.dir=build
+build.test.classes.dir=${build.dir}/test/classes
+platform.active=default_platform
+javac.compilerargs=
+main.class=br.com.gravandodatamysql.FormPessoas
+dist.jar=${dist.dir}/TreinoJava3.jar
+javac.test.processorpath=${javac.test.classpath}
+javadoc.use=true
+dist.archive.excludes=
+build.sysclasspath=ignore
+debug.test.classpath=${run.test.classpath}
+dist.dir=dist
+build.classes.excludes=**/*.java,**/*.form
+javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
+javac.source=1.8
+application.vendor=User
+junit.selected.version=4
+file.reference.javax.mail-api-1.4.7.jar=C\:\\Users\\User\\Downloads\\javax.mail-api-1.4.7.jar
+debug.classpath=${run.classpath}
+file.reference.commons-email-1.5.jar=C\:\\Users\\User\\Downloads\\commons-email-1.5\\commons-email-1.5.jar
+run.jvmargs=-Duser.language\=pt -Duser.country\=BR
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
+annotation.processing.run.all.processors=true
+application.title=TreinoJava3
+meta.inf.dir=${src.dir}/META-INF
+file.reference.rxtxcomm.jar=C\:\\Users\\User\\OneDrive\\Treinamentos\\JavaSEIII\\RXTXComm\\rxtxcomm.jar
+manifest.file=manifest.mf
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
+src.dir=src
+mkdist.disabled=false
+endorsed.classpath=
+javac.classpath=${libs.MySQLDriver.classpath}\:${file.reference.commons-email-1.5.jar}\:${file.reference.javax.mail-api-1.4.7.jar}\:${file.reference.javax.mail.jar}\:${libs.commons-email.classpath}\:${libs.JavaMail.classpath}\:${file.reference.rxtxcomm.jar}\:${libs.junit_4.classpath}
+annotation.processing.enabled.in.editor=false
+build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
-main.class=br.com.gravandodatamysql.FormPessoas
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Duser.language=pt -Duser.country=BR
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+javadoc.notree=false
