Pdf com a lib Itext

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=${libs.MySQLDriver.classpath}\:${file.reference.commons-email-1.5.jar}\:${file.reference.javax.mail-api-1.4.7.jar}\:${file.reference.javax.mail.jar}\:${libs.commons-email.classpath}\:${libs.JavaMail.classpath}\:${file.reference.rxtxcomm.jar}\:${libs.junit_4.classpath}
+javac.classpath=\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-email-1.5.jar}:\
+    ${file.reference.javax.mail-api-1.4.7.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${libs.commons-email.classpath}:\
+    ${libs.JavaMail.classpath}:\
+    ${file.reference.rxtxcomm.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.Itext.classpath}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
